# pbnn

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE.txt  README.md  pyproject.toml  pyrightconfig.json  ruff.toml  setup.py
.github/workflows/: uv-ci.yml
benchmark/: read_results.py  run_bayesian_algorithms.py  run_conformal_algorithms.py  utils.py
benchmark/pipelines/: deep_ensembles.py  experiments.py  hmc.py  kernelized_stein_discrepancies.py  laplace_pretrained.py  laplace_pretrained_heteroscedastic.py  lengthscale_estimation.py  logprobs.py  map.py  mapie_conformal.py  maximum_mean_discrepancies.py  mcdropout.py  metrics_prediction_intervals.py  sgmcmc.py  sgmcmc_single_dataset.py  split_cqr.py  swag.py
benchmark/pipelines/templates/: bayesian.sh  conformal.sh  kernelized_stein_discrepancies.sh  lengthscale.sh  map.sh  maximum_mean_discrepancies.sh  metrics_prediction_intervals.sh
doc/: conf.py  index.rst  requirements.txt
doc/_static/: custom.css
doc/_templates/: layout.html  module.rst_t  package.rst_t
doc/sources/: getting_started.rst  notebooks.rst
doc/sources/notebooks/: analytical_functions.ipynb  flax_mapie.ipynb  flax_vs_torch.ipynb  full_example.ipynb  g_function.ipynb  laplace_approximations.ipynb  sgld_example.ipynb  thinning_example.ipynb
examples/: plot_analytical_functions.py
pbnn/: deep_ensembles.py  map_estimation.py  mcdropout.py  swag.py
pbnn/mcmc/: __init__.py  hamiltonian.py  hmc.py  kernels.py  langevin.py  sghmc.py  sgld.py
pbnn/mcmc/sgmcmc/: __init__.py  diffusions.py  gradients.py  psgld.py  sghmccv.py  sgldcv.py
pbnn/utils/: analytical_fonctions.py  analytical_functions.py  data.py  misc.py  plot.py
src/pbnn/: __init__.py  map_estimation.py  mcdropout.py  models.py  swag.py
src/pbnn/core/: api.py
src/pbnn/inference/map/: method.py  optimizer.py
src/pbnn/mcmc/: __init__.py  hamiltonian.py  kernels.py  langevin.py
src/pbnn/mcmc/sgmcmc/: __init__.py  diffusions.py  psgld.py
src/pbnn/utils/: analytical_functions.py  data.py  misc.py  plot.py
