[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pbnn"
authors= [{name = "Brian Staber", email = "brian.staber@safrangroup.com"}]
description = "Prediction bands for neural networks"
requires-python = ">=3.9"
keywords=[
    "machine learning",
    "statistics",
    "deep learning",
    "bayesian inference",
    "ensembles",
    "mcmc",
    "variational inference",
    "laplace",
    "uncertainty"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "blackjax>=1.1.0",
    "numpy",
    "scipy",
    "typing-extensions>=4.4.0",
]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "pbnn/_version.py"

[project.urls]
homepage = "https://gitlab.com/drti/pbnn"
documentation = "https://pbnn.readthedocs.io/en/latest/"
repository = "https://gitlab.com/drti/pbnn"

[project.license]
text="MIT License"
files=["LICENSE"]

[project.readme]
file="README.md"
content-type = "text/markdown"

[tool.setuptools]
platforms = [
    "Linux",
    "Mac OS-X",
    "Unix",
]

[tool.setuptools.packages.find]
exclude = [
    "doc",
]