[project]
name = "pbnn"
version = "0.1.0"
description = "Package that provides high-level user interface for uncertainty quantification in deep learning models. It is based on Flax and BlackJAX."
authors = [
    {name = "Brian Staber",email = "brian.staber@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

# Don't include jaxlib at all – user installs manually for GPU
dependencies = [
    "blackjax (>=1.1.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "flax (>=0.10.4,<0.11.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "watermark (>=2.5.0,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
