[project]
name = "pbnn"
version = "0.1.0"
description = "Project that benchmarks uncertainty quantification methods for deep neural networks. It is based on Flax and BlackJAX."
readme = "README.md"
authors = [
    { name = "Brian Staber", email = "brian.staber@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "blackjax>=1.2.5",
    "flax>=0.10.7",
    "laplace-torch>=0.2.2.2",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "watermark>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]
plot = [
    "matplotlib>=3.10.6",
    "plotly>=6.3.0",
]
